--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -55,21 +55,11 @@ body{
 .card-img{
     height: 120px;
     width: 120px;
-    background-color: rgba(255, 255, 255, 0.06);
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
-    border-radius: 50%;
-    position: absolute;
-    margin: 30px auto 20px  auto;
-    left: 0;
-    right: 0;
-
+    margin-top: 40px;
+    margin-left: 50px;
 }
-.card-img img{
-    height: 100%;
-    border-radius: 50%;
-    margin-left: 7%;
-    margin-top: 7%;
+.img-logo{
+    width: 230px;
 }
 h6{
     margin: 0;
@@ -90,16 +80,9 @@ h6{
     letter-spacing: 1px;
     margin: 5px 0;
 }
-button{
-    background-color: rgba(255, 255, 255, 0.06);
-    -webkit-backdrop-filter: blur(20px);
-            backdrop-filter: blur(20px);
-    border: none;
 
-}
 .details{
-    display: -ms-grid;
-    display: grid;
+    text-align: center;
     width: 100%;
     height: 70px;
     padding: 5px 0;
@@ -107,51 +90,16 @@ button{
     grid-template-columns: auto auto;
     background-color: rgba(255, 255, 255, 0.06);
     -webkit-backdrop-filter: blur(20px);
-            backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
     position: absolute;
     bottom: 0;
     border-radius: 0 0 8px 8px;
-}
-.details>div{
-    text-align: center;
-}
-.details>div:first-child{
-    border-right: 2px solid rgba(255,255,255,0.08);
-}
-button{
-    width: 80%;
-    padding: 15px 0;
-    position: absolute;
-    left: 10%;
-    top: 240px;
-    border-radius: 5px;
-    outline: none;
-}
-a{
-    color: #ffffff;
-    font-family: "Poppins",sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.5px;
-    position:absolute;
-    right:20px ;
-    top:20px;
-    border:3px solid #ffffff;
-    border-radius: 5px;
-    text-decoration:none;
-}
-a>.fa{
-  color: #FF0000;
-}
-@media screen and (min-width: 451px) {
-  a{
-    font-size: 18px;
-     padding:8px 12px 8px 12px;
-  }
+    
 }
 
-@media screen and (max-width: 450px) {
-  a{
-    font-size: 12px;
-     padding:5px 8px 5px 8px;
+a{
+    font-size: 18px;
+    color: #dda9f5;
+     padding:8px 12px 8px 12px;
+     text-decoration: none;
   }
-}
